# weechat-elixir

./: COPYING  README.md
plugin-erlang-node/: Makefile  NOTES.md  main.c  meson.build
